<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.contactsapp.ui.MainActivity">

    <item
        android:id="@+id/action_refresh_small"
        android:orderInCategory="100"
        android:title="@string/action_refresh_small" />

    <item
        android:id="@+id/action_refresh_medium"
        android:orderInCategory="100"
        android:title="@string/action_refresh_medium" />

    <item
        android:id="@+id/action_refresh_large"
        android:orderInCategory="100"
        android:title="@string/action_refresh_large" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear" />
</menu>