<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addContactViewModel"
            type="com.example.contactsapp.viewmodels.AddContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_wall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddContactFragment">


        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:hint="@string/contact_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editText_name"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="50dp"
            android:onClick="@{() -> addContactViewModel.onCancelClick()}"
            app:layout_constraintEnd_toStartOf="@id/button_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_phone" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel"
            app:layout_constraintTop_toBottomOf="@id/editText_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>